@@ -1,29 +1,46 @@
 package com.articulate.sigma;
 
-import com.google.common.collect.Sets;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Tag;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Import;
+import org.springframework.test.context.ActiveProfiles;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
-public class KBITCase extends UnitTestBase {
+@SpringBootTest
+@Tag("com.articulate.sigma.TopOnly")
+@ActiveProfiles("TopOnly")
+@Import(KBmanagerTestConfiguration.class)
+public class KBITCase {
 
+    private KB kb;
+
+    @Autowired
+    private KBmanager kbManager;
+
+    @BeforeEach
+    void init() {
+        kb = kbManager.getKB(kbManager.getPref("sumokbname"));
+    }
     @Test
     public void testMostSpecificTerm() {
 
-        String t = SigmaTestBase.kb.mostSpecificTerm(Arrays.asList("Entity", "RealNumber"));
+        String t = kb.mostSpecificTerm(List.of("Entity", "RealNumber"));
         System.out.println("testMostSpecificTerm(): " + t);
-        assertEquals("RealNumber", t);
+        assertThat(t).isEqualTo("RealNumber");
     }
 
     @Test
     public void testAskWithTwoRestrictionsDirect1() {
 
-        ArrayList<Formula> actual = SigmaTestBase.kb.askWithTwoRestrictions(0, "subclass", 1, "Driving", 2, "Guiding");
-        assertNotEquals(0, actual.size());
+        List<Formula> actual = kb.askWithTwoRestrictions(0, "subclass", 1, "Driving", 2, "Guiding");
+        assertThat(actual.size()).isNotEqualTo(0);
     }
 
     /**
@@ -32,10 +49,9 @@ public class KBITCase extends UnitTestBase {
     @Test
     public void testAskWithTwoRestrictionsIndirect1() {
 
-        ArrayList<Formula> actual = SigmaTestBase.kb.askWithTwoRestrictions(0, "subclass", 1, "Driving", 2, "Guiding");
-        if (actual != null && actual.size() != 0)
-            System.out.println("KBtest.testAskWithTwoRestrictionsIndirect1(): " + actual);
-        assertEquals(1, actual.size());
+        List<Formula> actual = kb.askWithTwoRestrictions(0, "subclass", 1, "Driving", 2, "Guiding");
+
+        assertThat(actual.size()).isEqualTo(1);
     }
 
     /**
@@ -44,94 +60,92 @@ public class KBITCase extends UnitTestBase {
     @Test
     public void testAskWithTwoRestrictionsIndirect2() {
 
-        ArrayList<Formula> actual = SigmaTestBase.kb.askWithTwoRestrictions(0, "subclass", 1, "Boy", 2, "Entity");
-        assertEquals(0, actual.size());
+        List<Formula> actual = kb.askWithTwoRestrictions(0, "subclass", 1, "Boy", 2, "Entity");
+        assertThat(actual.size()).isEqualTo(0);
     }
 
     @Test
     public void testIsSubclass2() {
-        assertTrue(SigmaTestBase.kb.isSubclass("Driving", "Process"));
+        assertThat(kb.isSubclass("Driving", "Process")).isTrue();
     }
 
     @Test
     public void testRemoveSuperClassesEmptyInput() {
 
-        Set<String> inputSet = Sets.newHashSet();
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet();
-        assertEquals(expectedSet, actualSet);
+        Set<String> actualSet = kb.removeSuperClasses(Set.of());
+        assertThat(actualSet).isEqualTo(Set.of());
     }
 
     @Test
     public void testRemoveSuperClassesOneElementInput() {
 
-        Set<String> inputSet = Sets.newHashSet("nonsenseWord");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("nonsenseWord");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("nonsenseWord");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("nonsenseWord");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementIdenticalInput1() {
 
-        Set<String> inputSet = Sets.newHashSet("Entity", "Entity");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Entity");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Entity");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Entity");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementIdenticalInput2() {
 
-        Set<String> inputSet = Sets.newHashSet("Process", "Process");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Process");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Process");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Process");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementIdenticalInput3() {
 
-        Set<String> inputSet = Sets.newHashSet("Physical", "Physical");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Physical");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Physical");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Physical");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementInput() {
 
-        Set<String> inputSet = Sets.newHashSet("Man", "Human");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Man");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Man", "Human");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Man");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementInputReverse() {
 
-        Set<String> inputSet = Sets.newHashSet("Human", "Man");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Man");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Human", "Man");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Man");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesTwoElementInputNoSubclass() {
 
-        Set<String> inputSet = Sets.newHashSet("Man", "Woman");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Man", "Woman");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Man", "Woman");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Man", "Woman");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
     @Test
     public void testRemoveSuperClassesFiveElementInput() {
 
-        Set<String> inputSet = Sets.newHashSet("Object", "CorpuscularObject", "Woman", "Human", "Man");
-        Set<String> actualSet = SigmaTestBase.kb.removeSuperClasses(inputSet);
-        Set<String> expectedSet = Sets.newHashSet("Man", "Woman");
-        assertEquals(expectedSet, actualSet);
+        Set<String> inputSet = Set.of("Object", "CorpuscularObject", "Woman", "Human", "Man");
+        Set<String> actualSet = kb.removeSuperClasses(inputSet);
+        Set<String> expectedSet = Set.of("Man", "Woman");
+        assertThat(actualSet).isEqualTo(expectedSet);
     }
 
 }
